--- a/gw_config2.json
+++ b/gw_config2.json
@@ -178,7 +178,7 @@
     "save_weather_fmt": "", 
     "save_weather_path": "", 
     "scale": 0.94, 
-    "service": "AccuWeather", 
+    "service": "Gismeteo", 
     "show_bg_png": false, 
     "show_block_add_info": false, 
     "show_block_moonrise": true, 
@@ -247,12 +247,14 @@
         "x": 1161, 
         "y": 9
     }, 
+    "time_of_day_gradient": false, 
     "tooltip_fmt": "", 
     "tooltip_show": true, 
     "type_hint": 0, 
     "upd_time": 60, 
-    "weather_lang": "en", 
+    "weather_lang": "ua/ru", 
     "weather_menu": false, 
+    "weather_menu_n": 3, 
     "weekend": "Sa, Su", 
     "width_fix": 20, 
     "wind_attr": {
